add eddy example

--- a/notebooks/1.TCExample.ipynb
+++ b/notebooks/1.TCExample.ipynb
@@ -409,7 +409,8 @@
    "source": [
     "---\n",
     "### References\n",
-    "1. Qian, Y.-K., C.-X. Liang, Q. Liang, L. Lin, and Z. Yuan, 2011: [On the forced tangentially-averaged radial-vertical circulation within vortices. Part II: The transformation of Tropical Storm Haima (2004)](https://link.springer.com/article/10.1007/s00376-010-0060-x). *Adv. Atmos. Sci.*, **28**, 1143-1158."
+    "1. Yuan, Z., and M. Jian, 2002: [On the forced tangentially-averaged radial-vertical circulation within vortices. Part I: Concepts and equations](https://link.springer.com/article/10.1007/s00376-002-0058-0). *Adv. Atmos. Sci.*, **19**, 953-964.\n",
+    "2. Qian, Y.-K., C.-X. Liang, Q. Liang, L. Lin, and Z. Yuan, 2011: [On the forced tangentially-averaged radial-vertical circulation within vortices. Part II: The transformation of Tropical Storm Haima (2004)](https://link.springer.com/article/10.1007/s00376-010-0060-x). *Adv. Atmos. Sci.*, **28**, 1143-1158."
    ]
   }
  ],
